@@ -63,8 +63,10 @@ tutorials is offered below.<br>
 
 <font size=+1><b>Text File Documentation</b></font><br><li><a href=init.txt>init</a> - Information about importing and initializing pygame
 </li>
-<li><a href=install.txt>install</a> - Quickie build instructions for building and installing pygame
-</li><br>&nbsp;<br><font size=+1><b>Tutorials</b></font><br><li><a href=tut/DisplayModes.html>tut/DisplayModes</a> - Choosing and Configuring Display Modes
+<li><a href=install.txt>install</a> - Build instructions for building and installing pygame
+</li><br>&nbsp;<br><font size=+1><b>Tutorials</b></font><br><li><a href=tut/ChimpLineByLine.html>tut/ChimpLineByLine</a> - Line by Line Descriptions of the Chimp Example
+</li>
+<li><a href=tut/DisplayModes.html>tut/DisplayModes</a> - Choosing and Configuring Display Modes
 </li>
 
 <hr>
